logs/turbulenz-tools.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/jsmin'...
Listing './lib/python3.5/site-packages/jsmin-2.2.2.egg-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/turbulenz_tools'...
Listing './lib/python3.5/site-packages/turbulenz_tools/tools'...
Compiling './lib/python3.5/site-packages/turbulenz_tools/tools/appcodegen.py'...
***   File "./lib/python3.5/site-packages/turbulenz_tools/tools/appcodegen.py", line 185
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/turbulenz_tools/tools/exportevents.py'...
***   File "./lib/python3.5/site-packages/turbulenz_tools/tools/exportevents.py", line 100
    print '\r >> %s' % message,
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/turbulenz_tools/tools/json2stats.py'...
***   File "./lib/python3.5/site-packages/turbulenz_tools/tools/json2stats.py", line 57
    print divider
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/turbulenz_tools/tools/json2tar.py'...
***   File "./lib/python3.5/site-packages/turbulenz_tools/tools/json2tar.py", line 140
    print dep
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/turbulenz_tools/tools/json2txt.py'...
***   File "./lib/python3.5/site-packages/turbulenz_tools/tools/json2txt.py", line 96
    print '\033[;31m' + name + '\033[;m' + ': ' + disassembler.mark_up_asset({name: node}, expand),
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/turbulenz_tools/tools/makehtml.py'...
***   File "./lib/python3.5/site-packages/turbulenz_tools/tools/makehtml.py", line 121
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/turbulenz_tools/tools/maketzjs.py'...
***   File "./lib/python3.5/site-packages/turbulenz_tools/tools/maketzjs.py", line 344
    except ToolsException, e:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/turbulenz_tools/tools/mesh.py'...
***   File "./lib/python3.5/site-packages/turbulenz_tools/tools/mesh.py", line 626
    points = sorted(enumerate(self.positions), key=lambda (_, x): x)
                                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/turbulenz_tools/tools/pointmap.py'...
***   File "./lib/python3.5/site-packages/turbulenz_tools/tools/pointmap.py", line 121
    print "Result: %i %s is close to %s." % (r, VERTEXES[r], POINT)
                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/turbulenz_tools/tools/stdtool.py'...
***   File "./lib/python3.5/site-packages/turbulenz_tools/tools/stdtool.py", line 38
    print "Failed to import %s, listed in dependencies " \
                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/turbulenz_tools/tools/xml2json.py'...
***   File "./lib/python3.5/site-packages/turbulenz_tools/tools/xml2json.py", line 66
    print json_string
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/turbulenz_tools/utils'...
Compiling './lib/python3.5/site-packages/turbulenz_tools/utils/profiler.py'...
***   File "./lib/python3.5/site-packages/turbulenz_tools/utils/profiler.py", line 89
    print "%s%-16s - %s%.6f" % (_indent_string, node.name, _indent_string, duration)
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/turbulenz_tools-1.0.7.egg-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
